piercinger så langt så godt

--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ section {
     margin: 0 auto;
 }
 
+video {
+    width: 100%;
+    height: auto;
+}
+
 /*IANA START*/
 
 
@@ -124,10 +129,21 @@ section {
 
 /*MICHELLE START*/
 
+#piercinger .wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+#piercinger .col {
+    flex-grow: 1;
+    flex-basis: 600px;
+}
 
-
-
+@media only screen and (min-width: 700px) {
+    #piercinger .col {
+        flex-basis: 200px;
+    }
+}
 
 
 
