lavet generel css på a tag og rykket andre elementer

--- a/style.css
+++ b/style.css
@@ -26,6 +26,26 @@ video {
     height: auto;
 }
 
+a {
+    text-decoration: none;
+}
+
+h1,
+h2 {
+    color: #464040;
+    font-family: eurostile, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    text-transform: capitalize;
+}
+
+p,
+ul,
+li {
+    color: #2E2B2B;
+    font-family: 'PT Sans', sans-serif;
+}
+
 /*IANA START*/
 
 /*** fonte ***/
@@ -46,21 +66,6 @@ font-family: 'PT Sans', sans-serif;
 
 */
 
-h1,
-h2 {
-    color: #464040;
-    font-family: eurostile, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    text-transform: capitalize;
-}
-
-p,
-ul,
-li {
-    color: #2E2B2B;
-    font-family: 'PT Sans', sans-serif;
-}
 
 #praktiskinfo li {
     list-style-type: none;
