--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h2 {
     font-family: eurostile, sans-serif;
     font-weight: 700;
     font-style: normal;
-    text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 h2 {
