--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ a {
     text-decoration: none;
 }
 
+h1 {
+    font-size: 2rem;
+}
+
 h1,
 h2 {
     color: #464040;
@@ -113,6 +117,10 @@ font-family: 'PT Sans', sans-serif;
     border-radius: 45px;
 }
 
+#praktiskinfo .txt {
+    padding: 2rem;
+    padding-top: 0;
+}
 
 
 
