--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ font-family: 'PT Sans', sans-serif;
 
 #knapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -94,6 +95,7 @@ font-family: 'PT Sans', sans-serif;
 
     font-size: 0.75rem;
     border-radius: 45px;
+    margin: 10px 0;
 }
 
 #praktiskinfo .piercingknap p {
@@ -115,6 +117,7 @@ font-family: 'PT Sans', sans-serif;
     padding: 0.8rem;
     font-size: 0.75rem;
     border-radius: 45px;
+    margin: 10px 0;
 }
 
 #praktiskinfo .txt {
