--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ header nav a:hover {
 /*footer start*/
 footer {
     width: 100%;
+    height: 20rem;
     background-color: black;
 }
 
@@ -350,19 +351,25 @@ footer .wrap {
     left: 0;
     margin: 0 auto;
     max-width: 1200px;
-
 }
 
 footer .col {
     flex-grow: 1;
     flex-basis: 350px;
+    margin-top: 1.8rem;
 
-    padding: 0 2.5rem 0rem 0rem;
+    padding: 0 2.5rem 0rem 2.5rem;
 }
 
 footer li {
     list-style-type: none;
     color: #fffbeb;
+    font-size: 0.8rem;
+    line-height: 20px;
+}
+
+footer ul {
+    width: 12rem;
 }
 
 /*footer slut*/
