--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ h1 {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     color: #464040;
     font-family: eurostile, sans-serif;
     font-weight: 700;
@@ -326,6 +327,7 @@ header nav a:hover {
 
 /******Menu textdesign slut*******/
 
+/*
 #splash {
     background-image: url(billeder/splash1.jpg);
     width: 100vw;
@@ -333,7 +335,52 @@ header nav a:hover {
     background-size: cover;
     background-position: 30% 30%;
     max-width: none;
+}*/
+
+#slideshow {
+    width: 100%;
+    background-size: cover;
+    background-position: 30% 30%;
+    max-width: none;
+    max-height: none;
+    padding: 0;
+    margin: auto;
 }
+
+.hidden {
+    display: none;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 3s;
+}
+
+
+
+@keyframes fade {
+    0% {
+        opacity: .4
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -423,7 +470,7 @@ footer ul {
 
 #kontaktbooking input {
     width: 800px;
-    padding: 15px;
+    padding: 12px;
 }
 
 #besked input {
@@ -431,6 +478,8 @@ footer ul {
     height: 150px;
     padding: 15px;
 }
+
+
 
 /*Kontrakt/Booking slut*/
 
