--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ table tr:nth-child(odd) {
 
     left: 40vw;
     top: -1vw;
+    z-index: 102;
 }
 
 
@@ -290,12 +291,14 @@ header nav {
     position: fixed;
     background-color: black;
     width: 100%;
+    z-index: 100;
 }
 
 header {
     align-content: center;
     text-align: center;
     position: fixed;
+    z-index: 101;
 }
 
 nav {
