--- a/style.css
+++ b/style.css
@@ -418,7 +418,6 @@ header nav a:hover {
 /*footer start*/
 footer {
     width: 100%;
-    height: 20rem;
     background-color: black;
 }
 
@@ -432,10 +431,10 @@ footer .wrap {
 
 footer .col {
     flex-grow: 1;
-    flex-basis: 350px;
+    flex-basis: 500px;
     margin-top: 1.8rem;
 
-    padding: 0 2.5rem 0rem 2.5rem;
+    padding: 0 1rem 0rem 1rem;
 }
 
 footer li {
@@ -446,7 +445,9 @@ footer li {
 }
 
 footer ul {
-    width: 12rem;
+    padding: 2rem;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 /*footer slut*/
@@ -535,6 +536,12 @@ footer ul {
 
 @media only screen and (min-width: 700px) {
     #omos .col {
+        flex-basis: 150px;
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    footer .col {
         flex-basis: 150px;
     }
 }
