--- a/style.css
+++ b/style.css
@@ -564,6 +564,8 @@ footer ul {
     color: #e589c5;
     font-style: italic;
     text-align: center;
+    margin: 0;
+    padding: 1vw;
 }
 
 #piercinger .col {
