--- a/style.css
+++ b/style.css
@@ -563,7 +563,7 @@ footer ul {
 #piercinger p {
     color: #e589c5;
     font-style: italic;
-    text-align: center;
+    text-align: left;
     margin: 0;
     padding: 1vw;
 }
@@ -572,6 +572,8 @@ footer ul {
     margin: 0;
     padding: 0, 5vw;
 }
+
+
 
 
 
