--- a/style.css
+++ b/style.css
@@ -574,10 +574,25 @@ footer ul {
 }
 
 
+/*piercinger.html slut*/
 
 
 
 
+
+
+/*omos.html start*/
+
+
+#omos h2 {
+    color: black;
+    margin: 0;
+    text-align: center;
+}
+
+#omos p {
+    color: black;
+}
 
 
 
