--- a/style.css
+++ b/style.css
@@ -358,6 +358,11 @@ header nav a:hover {
 }
 
 
+.hidden {
+    display: none;
+}
+
+
 .fade {
     animation-name: fade;
     animation-duration: 4s;
@@ -405,11 +410,6 @@ header nav a:hover {
 #forside .txt {
     margin-left: 4rem;
 }
-
-
-
-
-
 
 
 
@@ -551,8 +551,32 @@ footer ul {
 
 
 
+/************Burger menu************/
 
 
+#menuknap {
+    color: white;
+    left: 0;
+    width: 10px;
+}
+
+#burger #menupraktiskinfo {
+    margin: 0;
+}
+
+@media only screen and (min-width: 1100px) {
+    #menuknap {
+        display: none;
+    }
+
+}
+
+@media only screen and (min-width: 1100px) {
+    #topnav {
+        display: block;
+    }
+
+}
 
 
 
