--- a/style.css
+++ b/style.css
@@ -564,7 +564,7 @@ footer ul {
     margin: 0;
 }
 
-<<<<<<< HEAD=======@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1100px) {
     #menuknap {
         display: none;
     }
@@ -578,13 +578,7 @@ footer ul {
 
 }
 
-=======
-/*piercinger.html start*/
-> > > > > > > origin/master <<<<<<< HEAD=======
-/*piercinger.html slut*/
-> > > > > > > origin/master
-/*omos.html start*/
-> > > > > > > origin/master
+
 /*MICHELLE SLUT*/
 
 
