--- a/style.css
+++ b/style.css
@@ -313,6 +313,12 @@ nav {
     margin: 0 25vw 0 0;
 }
 
+#burger li {
+    list-style-type: none;
+    text-align: left;
+    margin-left: 7vw;
+}
+
 /***********Menu generelt slut***********/
 
 /******Menu textdesign start*******/
@@ -355,6 +361,48 @@ header nav a:hover {
 
 .sort {
     background-color: black;
+}
+
+#splash {
+    padding: 0;
+    margin: 0;
+    max-width: none;
+}
+
+.splash1 {
+    background-image: url(billeder/splash1.jpg);
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    background-position: 30% 30%;
+    max-width: none;
+}
+
+.splash2 {
+    background-image: url(billeder/splash2.jpg);
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    background-position: 65% 30%;
+    max-width: none;
+}
+
+.splash3 {
+    background-image: url(billeder/splash3.jpg);
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    background-position: 20% 25%;
+    max-width: none;
+}
+
+.splash4 {
+    background-image: url(billeder/splash4.jpg);
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    background-position: 20% 30%;
+    max-width: none;
 }
 
 
@@ -565,7 +613,9 @@ footer ul {
 }
 
 @media only screen and (min-width: 1100px) {
-    #menuknap {
+
+    #menuknap,
+    #burger {
         display: none;
     }
 
@@ -576,6 +626,13 @@ footer ul {
         display: block;
     }
 
+}
+
+@media (min-width: 500px) and (orientation: portrait) {
+    #splash {
+        width: 100vw;
+
+    }
 }
 
 
